--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
         document.getElementById("tombol11").classList.remove("hidden");
       }, 1100);
 
-      document.getElementById("clickMe").click();
+//       document.getElementById("clickMe").click();
     </script>
   </body>
 </html>
