--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
       <div style="width: 100px" class="text-center mx-2">Menu 2</div>
       <div style="width: 100px" class="text-center mx-2">Menu 3</div>
     </header>
-    <h1 class="text-5xl" style="color: #fefcbf">Kendali Siaga Pangan</h1>
+    <h1 class="text-4xl md:text-5xl" style="color: #fefcbf">
+      Kendali Siaga Pangan
+    </h1>
     <h2 class="text-xl" style="color: #fefcbf">
       Pusat Ketersediaan dan Kerawanan Pangan
     </h2>
@@ -501,7 +503,7 @@
         document.getElementById("tombol11").classList.remove("hidden");
       }, 1100);
 
-//       document.getElementById("clickMe").click();
+      // document.getElementById("clickMe").click();
     </script>
   </body>
 </html>
