--- a/index.html
+++ b/index.html
@@ -316,24 +316,28 @@
       <button
         class="p-5 px-16 shadowku bg-yellow-100 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol1"
+        style="background-color: #eba873"
       >
         NBM
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-100 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol2"
+        style="background-color: #83b441"
       >
         FSVA
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-200 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol3"
+        style="background-color: #e7c45e"
       >
         <a href="http://pusatkkp.bkp.pertanian.go.id/pou/"> PoU </a>
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-200 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol4"
+        style="background-color: #35b9d2"
       >
         SiMonSTOK
       </button>
@@ -346,35 +350,41 @@
       <button
         class="p-5 px-16 shadowku bg-yellow-300 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol6"
+        style="background-color: #b4b2a6"
       >
         Web-KKP
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-400 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol7"
+        style="background-color: #cdc4bf"
       >
         <a href="https://www.bps.go.id/"> BPS </a>
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-400 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol8"
+        style="background-color: #cac1bc"
       >
         <a href="https://www.bmkg.go.id/"> BMKG </a>
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-500 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol9"
+        style="background-color: #b4aea2"
       >
         <a href="http://jhimaster.com/nbm_public"> DIBI </a>
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-500 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol10"
+        style="background-color: #bdd4ca"
       >
         ZOOM
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-600 rounded-md cursor-pointer mb-6 my-2 hidden animate__animated animate__bounceInUp"
+        style="background-color: #d489c1"
         id="tombol11"
       >
         Call Me
