--- a/index.html
+++ b/index.html
@@ -157,11 +157,14 @@
   </head>
 
   <body
-    class="flex pt-10 md:pt-0 md:justify-center items-center h-screen bg-green-700 flex-col"
-    style="background: linear-gradient(90deg, #13bf9e 0%, #108971 100%)"
+    class="flex pt-10 md:pt-0 md:justify-start items-center bg-green-700 flex-col"
+    style="
+      background: linear-gradient(90deg, #13bf9e 0%, #108971 100%);
+      height: 1200px;
+    "
   >
     <header
-      class="flex flex-row w-3/4 p-4 justify-center items-center bg-green-200"
+      class="flex flex-row w-3/4 p-4 justify-center items-center bg-green-200 mt-5"
     >
       <div style="width: 100px" class="text-center mx-2">Menu 1</div>
       <div style="width: 100px" class="text-center mx-2">Menu 2</div>
