--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       svg .draw-style {
         stroke: #fefcbf;
-        stroke-width: 8px;
+        stroke-width: 4px;
         fill: transparent;
       }
 
@@ -170,10 +170,10 @@
       <div style="width: 100px" class="text-center mx-2">Menu 2</div>
       <div style="width: 100px" class="text-center mx-2">Menu 3</div>
     </header>
-    <h1 class="text-4xl md:text-5xl" style="color: #fefcbf">
+    <h1 class="text-3xl md:text-5xl text-center" style="color: #fefcbf">
       Kendali Siaga Pangan
     </h1>
-    <h2 class="text-xl" style="color: #fefcbf">
+    <h2 class="text-lg text-center" style="color: #fefcbf">
       Pusat Ketersediaan dan Kerawanan Pangan
     </h2>
     <div
@@ -228,7 +228,7 @@
         </div>
         <div
           class="bg-green-500 shadow-xl cursor-pointer h-8 flex flex-col items-center p-5 rounded-full mx-16 justify-center text-4xl items-center"
-          style="width: 200px; height: 200px"
+          style="width: 195px; height: 195px; margin-top: 2px"
           id="clickMe"
         >
           <div
@@ -403,8 +403,8 @@
               <!-- {{-- Garis Atas Tengah --}} -->
               <line class="draw-animation" x1="640" y1="260" x2="640" y2="80" />
               <!-- {{-- Garis Atas Kiri dan Kanan --}} -->
-              <line class="draw-animation" x1="575" y1="287" x2="575" y2="185"/>
-              <line class="draw-animation" x1="705" y1="287" x2="705" y2="185" />
+              <line class="draw-animation" x1="577" y1="287" x2="577" y2="185"/>
+              <line class="draw-animation" x1="703" y1="287" x2="703" y2="185" />
               <line class="draw-animation-delay-atas" x1="579" y1="185" x2="475" y2="185" />
               <line class="draw-animation-delay-atas" x1="701" y1="185" x2="805" y2="185" />
               <!-- {{-- Garis Tengah Kiri dan Kanan --}} -->
@@ -413,14 +413,14 @@
               <!-- {{-- Garis Bawah Tengah --}} -->
               <line class="draw-animation" x1="640" y1="460" x2="640" y2="660" />
               <!-- {{-- Garis Bawah Kiri dan Kanan --}} {{-- x nya 70px --}} -->
-              <line class="draw-animation" x1="577" y1="435" x2="405" y2="435" />
-              <line class="draw-animation" x1="703" y1="435" x2="875" y2="435" />
+              <line class="draw-animation" x1="577" y1="433" x2="407" y2="433" />
+              <line class="draw-animation" x1="703" y1="433" x2="875" y2="433" />
               <!-- {{-- y nya 70px --}} -->
-              <line class="draw-animation-delay-bawah" x1="407" y1="431" x2="407" y2="505" />
+              <line class="draw-animation-delay-bawah" x1="409" y1="431" x2="409" y2="505" />
               <line class="draw-animation-delay-bawah" x1="873" y1="431" x2="873" y2="505" />
               <!-- {{-- Garis Bawah Bawah --}} -->
-              <line class="draw-animation" x1="640" y1="475" x2="540" y2="475" />
-              <line class="draw-animation" x1="640" y1="475" x2="740" y2="475" />
+              <line class="draw-animation" x1="640" y1="475" x2="542" y2="475" />
+              <line class="draw-animation" x1="640" y1="475" x2="738" y2="475" />
               <line class="draw-animation-delay-bawah-bawah" x1="544" y1="475" x2="544" y2="505" />
               <line class="draw-animation-delay-bawah-bawah" x1="736" y1="475" x2="736" y2="505" />
               <!-- {{-- Garis Terbawah --}} -->
@@ -516,7 +516,7 @@
         document.getElementById("tombol11").classList.remove("hidden");
       }, 1100);
 
-      // document.getElementById("clickMe").click();
+//       document.getElementById("clickMe").click();
     </script>
   </body>
 </html>
