--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             id="text-atas-kiri"
             style="background-color: #83b441"
           >
-            <a href="https://www.alsafinah.biz/fsva/"> FSVA</a>
+            <a href="http://app2.bkp.pertanian.go.id/"> FSVA </a>
           </div>
           <div class="" style="width: 300px"></div>
           <div
@@ -212,7 +212,7 @@
             id="text-atas-kanan"
             style="background-color: #e7c45e"
           >
-            PoU
+            <a href="http://pusatkkp.bkp.pertanian.go.id/pou/"> PoU </a>
           </div>
         </div>
       </div>
@@ -275,7 +275,7 @@
           style="width: 110px; background-color: #cdc4bf"
           id="text-bawah-kiri2"
         >
-          BPS
+          <a href="https://www.bps.go.id/"> BPS </a>
         </div>
         <div class="-mx-2"></div>
         <div
@@ -283,14 +283,13 @@
           style="width: 110px; background-color: #cac1bc"
           id="text-bawah-kanan"
         >
-          BMKG
-        </div>
+          <a href="https://www.bmkg.go.id/"> BMKG </a>
         <div
           class="shadowku bg-yellow-600 shadow-xl cursor-pointer h-8 flex items-center p-5 rounded-md justify-center hidden animate__animated animate__bounceInUp"
           style="width: 110px; margin-left: 15px; background-color: #b4aea2"
           id="text-bawah-kanan2"
         >
-          DIBI
+          <a href="http://dibi.bnpb.go.id/"> DIBI </a>
         </div>
       </div>
 
@@ -328,7 +327,7 @@
         id="tombol2"
         style="background-color: #83b441"
       >
-        <a href="https://www.alsafinah.biz/fsva/"> FSVA </a>
+        <a href="http://app2.bkp.pertanian.go.id/"> FSVA </a>
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-200 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
@@ -376,7 +375,7 @@
         id="tombol9"
         style="background-color: #b4aea2"
       >
-        <a href="http://jhimaster.com/nbm_public"> DIBI </a>
+        <a href="http://dibi.bnpb.go.id/"> DIBI </a>
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-500 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
