--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         id="tombol2"
         style="background-color: #83b441"
       >
-        <a href="https://www.alsafinah.biz/fsva/"> FSVA </a>
+        FSVA
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-200 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
@@ -342,7 +342,7 @@
         id="tombol4"
         style="background-color: #35b9d2"
       >
-        <a href="https://intervensi.aksespangan.com/"> SiMonSTOK </a>
+        SiMonSTOK
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-300 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
