--- a/index.html
+++ b/index.html
@@ -204,13 +204,14 @@
             id="text-atas-kiri"
             style="background-color: #83b441"
           >
-            <a href="https://www.alsafinah.biz/fsva/"> FSVA</a>
+            <a href="http://app2.bkp.pertanian.go.id/"> FSVA</a>
           </div>
           <div class="" style="width: 300px"></div>
           <div
             class="shadowku bg-yellow-400 shadow-xl cursor-pointer h-8 flex items-center p-5 rounded-md mx-7 hidden animate__animated animate__backInRight"
             id="text-atas-kanan"
             style="background-color: #e7c45e"
+            onclick="window.location.href='http://pusatkkp.bkp.pertanian.go.id/pou/'"
           >
             PoU
           </div>
@@ -274,6 +275,7 @@
           class="shadowku bg-yellow-600 shadow-xl cursor-pointer h-8 flex items-center p-5 rounded-md mr-12 ml-5 justify-center hidden animate__animated animate__bounceInUp"
           style="width: 110px; background-color: #cdc4bf"
           id="text-bawah-kiri2"
+          onclick="window.location.href='https://www.bps.go.id/'"
         >
           BPS
         </div>
@@ -282,6 +284,7 @@
           class="shadowku bg-yellow-600 shadow-xl cursor-pointer h-8 flex items-center p-5 rounded-md ml-12 ml-5 justify-center hidden animate__animated animate__bounceInUp"
           style="width: 110px; background-color: #cac1bc"
           id="text-bawah-kanan"
+          onclick="window.location.href='https://www.bmkg.go.id/'"
         >
           BMKG
         </div>
@@ -289,6 +292,7 @@
           class="shadowku bg-yellow-600 shadow-xl cursor-pointer h-8 flex items-center p-5 rounded-md justify-center hidden animate__animated animate__bounceInUp"
           style="width: 110px; margin-left: 15px; background-color: #b4aea2"
           id="text-bawah-kanan2"
+          onclick="window.location.href='http://dibi.bnpb.go.id/'"
         >
           DIBI
         </div>
@@ -327,6 +331,7 @@
         class="p-5 px-16 shadowku bg-yellow-100 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol2"
         style="background-color: #83b441"
+        onclick="window.location.href='http://app2.bkp.pertanian.go.id/'"
       >
         FSVA
       </button>
@@ -341,6 +346,7 @@
         class="p-5 px-16 shadowku bg-yellow-200 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
         id="tombol4"
         style="background-color: #35b9d2"
+        onclick="window.location.href='https://intervensi.aksespangan.com/'"
       >
         SiMonSTOK
       </button>
@@ -376,7 +382,7 @@
         id="tombol9"
         style="background-color: #b4aea2"
       >
-        <a href="http://jhimaster.com/nbm_public"> DIBI </a>
+        <a href="http://dibi.bnpb.go.id/"> DIBI </a>
       </button>
       <button
         class="p-5 px-16 shadowku bg-yellow-500 rounded-md cursor-pointer my-2 hidden animate__animated animate__bounceInUp"
